WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262663
REGRESSION(iOS17/Sonoma): 8 WebCryptoAPI tests are constantly crashing.
https://bugs.webkit.org/show_bug.cgi?id=262663
Summary
REGRESSION(iOS17/Sonoma): 8 WebCryptoAPI tests are constantly crashing.
Ben Schwartz
Reported
2023-10-04 15:58:12 PDT
The following tests are constantly crashing on macOS Sonoma (wk1 and wk2) and iOS 17: imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/failures_X25519.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/failures_X25519.https.any.worker.html imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/successes_X25519.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/successes_X25519.https.any.worker.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey.https.any.worker.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey_failures_X25519.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey_failures_X25519.https.any.worker.html HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2FgenerateKey%2Ffailures_X25519.https.any.html&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2FgenerateKey%2Ffailures_X25519.https.any.worker.html&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2FgenerateKey%2Fsuccesses_X25519.https.any.html&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2FgenerateKey%2Fsuccesses_X25519.https.any.worker.html&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2Fimport_export%2Fokp_importKey.https.any.html&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2Fimport_export%2Fokp_importKey.https.any.worker.html&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2Fimport_export%2Fokp_importKey_failures_X25519.https.any.html&test=imported%2Fw3c%2Fweb-platform-tests%2FWebCryptoAPI%2Fimport_export%2Fokp_importKey_failures_X25519.https.any.worker.html
CRASH LOG (wk1, similar on wk2): No crash log found for DumpRenderTree:91338. RESULTS URL:
https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/268866@main%20(121)/results.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-04 15:58:23 PDT
<
rdar://problem/116490690
>
EWS
Comment 2
2023-10-04 16:27:00 PDT
Test gardening commit
268881@main
(e26a784c02c9): <
https://commits.webkit.org/268881@main
> Reviewed commits have been landed. Closing PR #18659 and removing active labels.
Ben Schwartz
Comment 3
2023-10-05 11:54:00 PDT
REPRODUCIBILITY: I was able to reproduce this issue on macOS Sonoma (14.0, 23A344/arm64) ToT using the following commands: ```python3 Tools/CISupport/download-built-product --platform=mac --release '
https://s3-us-west-2.amazonaws.com/archives.webkit.org/mac-sonoma-x86_64
arm64-release/
268916@main.zip
' python3 Tools/CISupport/built-product-archive --platform=mac-sonoma --release extract python3 Tools/Scripts/run-webkit-tests --no-build --no-show-results --no-new-test-results --clobber-old-results --release --results-directory layout-test-results --debug-rwt-logging --no-retry-failures --force imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/failures_X25519.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/failures_X25519.https.any.worker.html imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/successes_X25519.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/generateKey/successes_X25519.https.any.worker.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey.https.any.worker.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey_failures_X25519.https.any.html imported/w3c/web-platform-tests/WebCryptoAPI/import_export/okp_importKey_failures_X25519.https.any.worker.html```
pascoe@apple.com
Comment 4
2023-10-23 11:30:07 PDT
https://github.com/WebKit/WebKit/pull/19432
Nitin Mahendru
Comment 5
2024-01-09 09:55:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22545
EWS
Comment 6
2024-01-11 16:37:54 PST
Committed
272946@main
(c40282d7bbd5): <
https://commits.webkit.org/272946@main
> Reviewed commits have been landed. Closing PR #22545 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug