REGRESSION(iOS17/Sonoma): 8 WebCryptoAPI tests are constantly crashing. https://bugs.webkit.org/show_bug.cgi?id=262663 rdar://116490690

Reviewed by NOBODY (OOPS!).

Remove some forward declared functions that have made it in the SDK.

* LayoutTests/platform/ios-16/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/PAL/pal/spi/cocoa/CoreCryptoSPI.h: